--- a/assets/css/contactus.css
+++ b/assets/css/contactus.css
@@ -85,13 +85,13 @@
     transform-style: preserve-3d;
 }
 
-/* .flip-box:hover .flip-box-front
+ .flip-box:hover .flip-box-front
 {
     flex: 0 0 100%;
     max-width: 100%;
     transform: rotateY(-180deg);
     transform-style: preserve-3d;
-} */
+} 
 
 .flip-box-back
 {
@@ -105,14 +105,14 @@
     background-color: var(--var-color-white);
     box-shadow: var(--var-light-shadow);       
 }
-/* .flip-box:hover .flip-box-back
+ .flip-box:hover .flip-box-back
 {
     flex: 0 0 100%;
     min-width: 100%;
     position: -webkit-sticky;
     transform: rotate(0deg);
     transform-style: preserve-3d;
-}  */
+}  
 .flip-box-front .inner
 {
     position: absolute;
